--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,31 @@
+* {
+	color: #707070;
+}
 .container {
 	max-width: 1640px;
 	width: 100%;
 	margin: 0 auto;
-	padding: 0 140px;
 }
 
 .flex {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 /* header styles */
 .header {
-	padding: 52px 0;
+	padding: 52px 142px;
 	font-size: 20px;
 	font-family: 'ArchyEDT-Thin';
 	line-height: 27px;
 	letter-spacing: 1px;
+	flex-wrap: wrap;
 }
 
 .navbar a{
 	margin-right: 40px;
-	color: #707070;
 }
 
 .header-right img:last-child {
@@ -32,10 +35,87 @@
 
 /* banner img */
 .banner {
-	width: 100%;
 	height: 613px;
+	width: 100%;
+	padding: 52px 142px;
 	background-image: url(../img/სლაიდერი3.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center; 
+}
 
+/* articles styles */
+/*.articles {
+	flex-wrap: wrap;
+}*/
+
+.articles-section {
+	width: 100%;
+	padding: 100px 142px;
+}
+
+.section-title {
+	margin-bottom: 50px;
+	font-size: 40px;
+	font-family: 'ArchyEDT-Thin';
+	line-height: 53px;
+	letter-spacing: 1px;
+}
+
+.article-div {
+	width: 483px;
+}
+
+.article-text {
+	width: 100%;
+	padding: 0 10px;
+	display: flex;
+	flex-direction: column;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+}
+
+.article-text h2 {
+	margin: 20px 0; 
+	font-size: 30px;
+	font-family: 'ArchyEDT-Thin';
+	line-height: 40px;
+	letter-spacing: 1px;
+}
+
+.article-text p {
+	font-size: 18px;
+	font-family: sans-serif;
+	line-height: 24px; 
+}
+
+.article-text a:last-child {
+	align-self: flex-end;
+	margin: 50px 0 30px 0;
+	font-size: 24px;
+	font-family: 'ArchyEDT-Thin';
+	line-height: 32px;
+}
+
+/*.article-div:last-child {
+	margin-right: 0;
+}
+*/
+.article-div img {
+	width: 100%;
+}
+
+.load-more {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	font-size: 30px;
+	font-family: 'ArchyEDT-Thin';
+	line-height: 40px;
+	letter-spacing: 1px;
+	margin-bottom: 50px;
+}
+
+.load-more span {
+	border-bottom: 2px solid rgba(0, 0, 0, 0.2);
 }
